test más cambios

--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -1,7 +1,7 @@
 codigo.idioma = en
-inicio.bienvenida = WELCOME TO THE BOOK STORE
-inicio.inicio = Home
-inicio.carrito = Cart
-inicio.identificarme = Log In
-inicio.registrarme = Register
-inicio.salir = Log Out
+inicio.bienvenida = WELCOME TO MY BOOKSHOP
+inicio.inicio = start
+inicio.carrito = cart
+inicio.identificarme = log in
+inicio.registrarme = sign in
+inicio.salir = log out
