--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/WEB-INF/messages/messages.properties
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/WEB-INF/messages/messages.properties
@@ -1,8 +1,8 @@
-#Textos por defecto si no se especificó un código de idioma
+#textos por defecto si no se especifico un codigo de idioma
 codigo.idioma = es
 inicio.bienvenida = BIENVENIDO A LA TIENDA DE LIBROS
-inicio.inicio = Inicio
-inicio.carrito = Carrito
-inicio.identificarme = Identificarme
-inicio.registrarme = Registrarme
-inicio.salir = Salir
+inicio.inicio = inicio
+inicio.carrito = carrito
+inicio.identificarme = identificarme
+inicio.registrarme = registrarme
+inicio.salir = salir
